--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     
     <div id="navbar" class="header-navbar fixed-top">
-      <nav class="navbar navbar-expand-lg container">
+      <nav class="navbar navbar-dark navbar-expand-md container">
         <a class="navbar-brand" href="index.html">Brand</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header-navbar" aria-controls="header-navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,21 +53,27 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/slider/sl1.jpg" alt="First slide">
+              <div class="carousel-item__image">
+                <img class="d-block w-100" src="img/slider/sl1.jpg" alt="First slide">
+              </div>
               <div class="carousel-caption d-none d-md-block">
                 <h3>Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/slider/sl2.jpg" alt="Second slide">
+              <div class="carousel-item__image">
+                <img class="d-block w-100" src="img/slider/sl2.jpg" alt="Second slide">
+              </div>
               <div class="carousel-caption d-none d-md-block">
                 <h3>Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/slider/sl3.jpg" alt="Third slide">
+              <div class="carousel-item__image">
+                <img class="d-block w-100" src="img/slider/sl3.jpg" alt="Third slide">
+              </div>
               <div class="carousel-caption d-none d-md-block">
                 <h3>Lorem ipsum dolor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur</p>
@@ -89,12 +95,12 @@
         <div class="container">
           <h2 class="page-section__title" data-aos="fade-up">About us</h2>
           <div class="row">
-            <div class="col" data-aos="fade-right" data-aos-delay="500">
+            <div class="col-12 col-md-6" data-aos="fade-right" data-aos-delay="500">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.Ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit Sed ut perspiciatis unde omnis iste. Lorem ipsum dolor sit amet.</p>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eos repellendus inventore debitis nesciunt reiciendis corporis repellat molestiae optio, nihil vitae, illum nisi ab minus ullam, saepe ipsam dolor aliquam?</p>
             </div>
-            <div class="col" data-aos="fade-left" data-aos-delay="1000">
+            <div class="col-12 col-md-6" data-aos="fade-left" data-aos-delay="1000">
               <div class="progress-item">
                 <h4>User Experiances</h4>
                 <div class="progress" style="height: 20px;">
@@ -139,22 +145,22 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-3 text-center" data-aos="fade-up-right" data-aos-duration="300" data-aos-delay="200">
+            <div class="col-12 col-md-6 col-lg-3 text-center" data-aos="fade-up-right" data-aos-duration="300" data-aos-delay="200">
               <div class="page-features-icon"><i class="fab fa-css3"></i></div>
               <h3>Responsive Design</h3>
               <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate...</p>
             </div>
-            <div class="col-3 text-center" data-aos="fade-up" data-aos-duration="300" data-aos-delay="400">
+            <div class="col-12 col-md-6 col-lg-3 text-center" data-aos="fade-up" data-aos-duration="300" data-aos-delay="400">
               <div class="page-features-icon"><i class="fas fa-code"></i></div>
               <h3>No Code Required</h3>
               <p>Sed eu dapibus nunc. Integer placerat laoreet ligula, a lobortis metus varius sed. Donec at blandit ...</p>
             </div>
-            <div class="col-3 text-center" data-aos="fade-up" data-aos-duration="300" data-aos-delay="600">
+            <div class="col-12 col-md-6 col-lg-3 text-center" data-aos="fade-up" data-aos-duration="300" data-aos-delay="600">
               <div class="page-features-icon"><i class="fas fa-info"></i></div>
               <h3>Clear Style</h3>
               <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis.</p>
             </div>
-            <div class="col-3 text-center" data-aos="fade-up-left" data-aos-duration="300" data-aos-delay="800">
+            <div class="col-12 col-md-6 col-lg-3 text-center" data-aos="fade-up-left" data-aos-duration="300" data-aos-delay="800">
               <div class="page-features-icon"><i class="fas fa-briefcase"></i></div>
               <h3>Cross Browser Compatible</h3>
               <p>Nunc interdum commodo arcu non fermentum. Vestibulum tincidunt diam metus, ut maximus sem luctus ege..</p>
@@ -172,7 +178,7 @@
             </div>
           </div>
           <div class="row no-gutters">
-            <div class="col-3" data-aos="zoom-in-right" data-aos-delay="200">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-right" data-aos-delay="200">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/barn-owl-1107397_1920-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -181,7 +187,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3" data-aos="zoom-in-down" data-aos-delay="400">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-down" data-aos-delay="400">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/child-1111818_1920-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -190,7 +196,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3" data-aos="zoom-in-down" data-aos-delay="600">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-down" data-aos-delay="600">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/coffee-1117933_1920-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -199,7 +205,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3" data-aos="zoom-in-left" data-aos-delay="800">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-left" data-aos-delay="800">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/cologne-1078671_1280-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -208,7 +214,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3" data-aos="zoom-in-right" data-aos-delay="400">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-right" data-aos-delay="400">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/girl-1128523_1920-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -217,7 +223,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3" data-aos="zoom-in-up" data-aos-delay="600">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-up" data-aos-delay="600">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/pexels-photo-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -226,7 +232,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3" data-aos="zoom-in-up" data-aos-delay="800">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-up" data-aos-delay="800">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/skyline-936589_1920-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -235,7 +241,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3" data-aos="zoom-in-left" data-aos-delay="1000">
+            <div class="col-12 col-md-6 col-lg-3" data-aos="zoom-in-left" data-aos-delay="1000">
               <div class="page-gallery-item">
                 <img class="page-gallery-item__image" src="img/gallery/sunrise-1107408_1920-550x500.jpg" alt="image">
                 <div class="page-gallery-item__caption">
@@ -257,13 +263,13 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-6 page-latest-item p-0" data-aos="fade-down-right" data-aos-delay="200">
+            <div class="col-12 col-lg-6 page-latest-item p-0" data-aos="fade-down-right" data-aos-delay="200">
               <a href="#" class="d-block">            
                 <div class="row no-gutters">
-                  <div class="col-6">
+                  <div class="col-12 col-md-6 order-md-2">
                     <img class="w-100" src="img/gallery/pexels-photo-550x500.jpg" alt="image">
                   </div>
-                  <div class="col-6 page-latest-item__description">
+                  <div class="col-12 col-md-6 order-md-1 page-latest-item__description">
                     <h4>Oxygen</h4>
                     <p><i class="far fa-calendar-alt"></i>October 5, 2015</p>
                     <p>Praesent libero nisi, malesuada quis faucibus ac, ultricies ut risus. Ut a est sodales, rutrum odio at, accumsan augue. Sed ac nulla est. Integer vitae ipsum...</p>
@@ -271,13 +277,13 @@
                 </div>
               </a>
             </div>
-            <div class="col-6 page-latest-item p-0" data-aos="fade-down-left" data-aos-delay="400">
+            <div class="col-12 col-lg-6 page-latest-item p-0" data-aos="fade-down-left" data-aos-delay="400">
               <a href="#" class="d-block">            
                 <div class="row no-gutters">
-                  <div class="col-6">
+                  <div class="col-12 col-md-6">
                     <img class="w-100" src="img/gallery/sunrise-1107408_1920-550x500.jpg" alt="image">
                   </div>
-                  <div class="col-6 page-latest-item__description">
+                  <div class="col-12 col-md-6 page-latest-item__description">
                     <h4>Fashion</h4>
                     <p><i class="far fa-calendar-alt"></i>October 5, 2015</p>
                     <p>Phasellus accumsan nibh odio, a tincidunt nunc condimentum non. Maecenas fringilla consectetur luctus. Nulla ut iaculis quam, pharetra porta libero. Phasellus e...</p>
@@ -285,13 +291,13 @@
                 </div>
               </a>
             </div>
-            <div class="col-6 page-latest-item p-0" data-aos="fade-up-right" data-aos-delay="600">
+            <div class="col-12 col-lg-6 page-latest-item p-0" data-aos="fade-up-right" data-aos-delay="600">
               <a href="#" class="d-block">            
                 <div class="row no-gutters">
-                  <div class="col-6 order-2">
+                  <div class="col-12 col-md-6 order-md-2 order-lg-2">
                     <img class="w-100" src="img/gallery/child-1111818_1920-550x500.jpg" alt="image">
                   </div>
-                  <div class="col-6 order-1 page-latest-item__description">
+                  <div class="col-12 col-md-6 order-md-1 order-lg-1 page-latest-item__description">
                     <h4>Victoria</h4>
                     <p><i class="far fa-calendar-alt"></i>October 5, 2015</p>
                     <p>Phasellus accumsan nibh odio, a tincidunt nunc condimentum non. Maecenas fringilla consectetur luctus. Nulla ut iaculis quam, pharetra porta libero. Phasellus e...</p>
@@ -299,13 +305,13 @@
                 </div>
               </a>
             </div>
-            <div class="col-6 page-latest-item p-0" data-aos="fade-up-left" data-aos-delay="800">
+            <div class="col-12 col-lg-6 page-latest-item p-0" data-aos="fade-up-left" data-aos-delay="800">
               <a href="#" class="d-block">            
                 <div class="row no-gutters">
-                  <div class="col-6 order-2">
+                  <div class="col-12 col-md-6 order-lg-2">
                     <img class="w-100" src="img/gallery/skyline-936589_1920-550x500.jpg" alt="image">
                   </div>
-                  <div class="col-6 order-1 page-latest-item__description">
+                  <div class="col-12 col-md-6 order-lg-1 page-latest-item__description">
                     <h4>Paparza</h4>
                     <p><i class="far fa-calendar-alt"></i>October 5, 2015</p>
                     <p>Nullam et justo tortor. Morbi quis urna enim. Vestibulum nec mattis diam. Ut tincidunt id odio efficitur ultrices. Maecenas congue, ex a blandit pellentesque, m...</p>
@@ -320,8 +326,8 @@
       <section id="page-choose" class="page-choose">
         <div class="container-fluid">
           <div class="row page-choose-image">
-            <div class="col-6"></div>
-            <div class="col-6 page-choose-content page-section">
+            <div class="col-lg-6 page-choose-col-hidden"></div>
+            <div class="col-md-12 col-lg-6 page-choose-content page-section">
               <div class="container-fluid">
                 <div class="page-choose-header" data-aos="fade-left">
                   <h2 class="page-section__title">Why Choose Us</h2>
@@ -395,11 +401,11 @@
         <div class="row page-footer-top page-section">
           <div class="container">
             <div class="row" data-aos="fade-up">
-              <div class="col-5">
+              <div class="col-12 col-md-6 col-lg-5">
                 <h3>About us</h3>
                 <p>Phasellus accumsan nibh odio, a tincidunt nunc condimentum non. Maecenas fringilla consectetur luctus. Nulla ut iaculis quam, pharetra porta libero. Phasellus et tristique orci, nec malesuada velit. V...</p>
               </div>
-              <div class="col-2 offset-md-1">
+              <div class="col-12 col-md-6 col-lg-2 offset-lg-1">
                 <h3>Categories</h3>
                 <ul class="p-0">
                   <li><a href="#">Brochure</a></li>
@@ -409,7 +415,7 @@
                   <li><a href="#">Websites</a></li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-12 col-md-6 col-lg-2">
                 <h3>Menu</h3>
                 <ul class="p-0">
                   <li><a href="#">About us</a></li>
@@ -420,7 +426,7 @@
                   <li><a href="#">Shop</a></li>
                 </ul>
               </div>
-              <div class="col-2">
+              <div class="col-12 col-md-6 col-lg-2">
                 <h3>Categories</h3>
                 <ul class="p-0">
                   <li><a href="#">Brochure</a></li>
