--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
             <div class="col-12 col-lg-6 page-latest-item p-0" data-aos="fade-down-right" data-aos-delay="200">
               <a href="#" class="d-block">            
                 <div class="row no-gutters">
-                  <div class="col-12 col-md-6 order-md-2">
+                  <div class="col-12 col-md-6 order-md-2 order-lg-1">
                     <img class="w-100" src="img/gallery/pexels-photo-550x500.jpg" alt="image">
                   </div>
-                  <div class="col-12 col-md-6 order-md-1 page-latest-item__description">
+                  <div class="col-12 col-md-6 order-md-1 order-lg-2 page-latest-item__description">
                     <h4>Oxygen</h4>
                     <p><i class="far fa-calendar-alt"></i>October 5, 2015</p>
                     <p>Praesent libero nisi, malesuada quis faucibus ac, ultricies ut risus. Ut a est sodales, rutrum odio at, accumsan augue. Sed ac nulla est. Integer vitae ipsum...</p>
