--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -256,7 +256,7 @@
 
       <section id="page-latest" class="page-latest page-section">
         <div class="container">
-          <div classs="row">
+          <div class="row">
             <div class="col" data-aos="fade-up">
               <h2 class="page-section__title">Latest from our Blog</h2>
               <p class="page-section__subtitle">Check out the latest post from our blog</p>
